schema/testdata/validation_relationships_create_nested_ambiguous/schema.keel
model House {
    fields {
        houseName Text
        houseNumber Number
        owner Owner
    }

    actions {
        create createHouse() with (
            houseName,
            houseNumber,
            owner.ownerName,
            owner.pet.typeOfAnimal,
            owner.pet.favouriteToy.id,
            owner.pet.favouriteToy.whatIsIt,
        )
    }
}

model Owner {
    fields {
        ownerName Text
        pet Pet
    }
}

model Pet {
    fields {
        typeOfAnimal Text
        favouriteToy Toy
    }
}

model Toy {
    fields {
        whatIsIt Text
    }
}
